--- a/InvitsPlugin/src/main/resources/plugin.yml
+++ b/InvitsPlugin/src/main/resources/plugin.yml
@@ -2,3 +2,44 @@ name: InvitsPlugin
 version: '${version}'
 main: com.rock_mc.invitsplugin.InvitsPlugin
 api-version: '1.20'
+description: A minecraft plugin for invitation only
+author: CodingMan
+prefix: InvitSys
+commands:
+  invits:
+    description: Show help of InvitationSystem
+    usage: /invits
+    default: true
+  invits verify:
+    description: Input the invitation code to verify player
+    usage: /invits verify <invitation code>
+    default: true
+  invits gencode:
+    description: Generate invitation code and reduce a quota of the player
+    usage: /invits gencode
+    default: true
+  invits info:
+    description: Show the the state of Invitation System to the player
+    usage: /invits info
+    default: true
+  invits give:
+    description: Give invitation code quota to the player
+    usage: /invits give
+    default: op
+  invits block:
+    description: Block the player
+    usage: /invits block day hour min sec
+    default: op
+  invits unblock:
+    description: Unblock the player
+    usage: /invits block
+    default: op
+
+permissions:
+  invits.*:
+    description: Gives access to all commands
+    children:
+      invits.gencode: true
+  invits.gencode:
+    description: Allows you to generate invitation code
+    default: op
