--- a/InvitsPlugin/build.gradle
+++ b/InvitsPlugin/build.gradle
@@ -15,10 +15,15 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://repo.papermc.io/repository/maven-public/' }
 }
 
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
+    testImplementation 'com.github.MockBukkit:MockBukkit:v1.20-SNAPSHOT'
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.6'
 }
 
 def targetJavaVersion = 17
@@ -46,4 +51,19 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
+}
+
+sourceSets {
+    test {
+        java {
+            srcDir 'src/test/java'
+        }
+        resources {
+            srcDir 'src/test/resources'
+        }
+    }
+}
+
+tasks.named('test', Test) {
+    useJUnitPlatform()
 }
