--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -24,6 +24,13 @@ commands:
   sd unblock:
     description: Unblock the player
     usage: /sd block player
+  sd open:
+    description: Allow everyone to come into the server but the player in the block list.
+    usage: /sd open
+  sd close:
+    description: Allow the player in the allowlist to come into the server.
+    usage: /sd close
+
 
 permissions:
   sd.*:
@@ -32,6 +39,7 @@ permissions:
       sd.gencode: true
       sd.block: true
       sd.unblock: true
+      sd.door: true
   sd.gencode:
     description: Allows you to generate verification code
     default: op
@@ -40,4 +48,7 @@ permissions:
     default: op
   sd.unblock:
     description: Allows you to unblock the player
+    default: op
+  sd.door:
+    description: Allows you to open/close the door
     default: op
