--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,2 +1,7 @@
-# open the door
-open: false
+# This is the configuration file for the plugin.
+door:
+
+  # Door open setting
+  # if true, allow everyone to enter the server, except for players on the ban list
+  # if false, allow the player in the allowlist to come into the server.
+  open: false
