--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,13 +1,13 @@
-name: SecureDoors
+name: SecureDoor
 version: '${version}'
-main: com.rock_mc.securedoors.SecureDoors
+main: com.rock_mc.securedoor.SecureDoor
 api-version: '1.20'
 description: A minecraft plugin for white list
 author: Rock Minecraft Server
-prefix: SecureDoors
+prefix: SecureDoor
 commands:
   sd:
-    description: Show help of SecureDoors
+    description: Show help of SecureDoor
     usage: /sd
   sd verify:
     description: Input the verification code to verify player
@@ -16,7 +16,7 @@ commands:
     description: Generate verification code
     usage: /sd gencode [number]
   sd info:
-    description: Show the the state of SecureDoors System info
+    description: Show the the state of SecureDoor System info
     usage: /sd info
   sd ban:
     description: Ban the player
@@ -50,7 +50,7 @@ permissions:
     description: Allows you to unban the player
     default: op
   sd.info:
-    description: Allows you to check the state of SecureDoors System info
+    description: Allows you to check the state of SecureDoor System info
     default: op
   sd.door:
     description: Allows you to open/close the door
