feat: add guest mode.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,11 +1,10 @@
 # This is the configuration file for the plugin.
 syn:
 
-  # Door open setting
   # if true, allow everyone to enter the server, except for players on the ban list
   # if false, allow the player in the allowlist to come into the server.
   # The default value is false
-  open: false
+  guest: false
 
   # The available characters for the verification code
   # The length requires to be 10 or more
