--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,12 @@ repositories {
     }
     maven { url 'https://jitpack.io' }
     maven { url 'https://repo.papermc.io/repository/maven-public/' }
+    maven { url 'https://nexus.scarsz.me/content/groups/public/' }
 }
 
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT"
+    compileOnly 'com.discordsrv:discordsrv:1.27.0'
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.45.3.0'
 
