Feat/discord api (#33)
* feat: gencode via Discord using DiscordSRV #32

* feat: gencode via Discord using DiscordSRV #32

* feat: config syn channel name, receive only messages from syn channel, call gencode commands and reply the result.

* feat: invert hasPermission method, add guest command to DC, listen to syn channel. #32

* refactor: LogProvider, Command Executor, UserInfo #32

* fix: player_info table name #32

* refactor: help, verify, info, log, unban command calls #32

* refactor: rename kickplayer, move extractArgs & matchCommand to Utils. reviews resolved.

* build: folia supported #32

* feat: syn info and unban commands #32

* refactor: move utils.

* refactor: everything.

* feat: add enable detection.

* test: test fixed, info log by logger; reply message by console sender

* chore: remove useless func.

* test: use Bukkit.getLogger() for different system level logs; use Bukkit.getConsoleSender() to reply messages on console. the messages could be tested.

---------

Co-authored-by: hwdtw <yar0730@msn.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -46,6 +46,9 @@ syn:
   # The default value is 365
   clear_days: 365
 
+  # Channel names set in the Channels section of the DiscordSRV plugin's config.yml
+  channel_name: syn
+
   # Database setting
   database:
       # The database type, currently only support sqlite
