--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'maven-publish'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group = 'com.rock_mc'
@@ -24,7 +26,7 @@ dependencies {
     compileOnly "org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT"
     compileOnly 'com.discordsrv:discordsrv:1.27.0'
 
-    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.45.3.0'
+    implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
 
     testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
     testImplementation 'com.github.MockBukkit:MockBukkit:v1.20-SNAPSHOT'
@@ -79,6 +81,6 @@ tasks.named('test', Test) {
 task testOnServer(type: Copy) {
     dependsOn('jar')
     from('build/libs/')
-    into('server/plugins/')
+    into('folia_server/plugins/')
     include('*.jar')
 }
