--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
 
     testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
-    testImplementation 'com.github.MockBukkit:MockBukkit:v1.20-SNAPSHOT'
+    testImplementation 'com.github.seeseemelk:MockBukkit-v1.20:3.86.1'
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.6'
 }
 
